syntax = "proto3";
option java_package = "Grpc";

message CreateProjectRequest{
  string request = 1;
}
message CreateProjectResponse{
  string response = 1;
  int32 status = 2;
}
service UserService{
  rpc createProject(CreateProjectRequest) returns(CreateProjectResponse);
}